security-mtls/manifests/noscDeployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-hyphen
  labels:
    app: echo-hyphen
    service: echo-hyphen 
spec:
  ports:
  - name: echo-hyphen
    port: 2000
  selector:
    app: echo-hyphen
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo-hyphen
    version: v2
  name: echo-hyphen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-hyphen
      version: v2
  template:
    metadata:
      labels:
        app: echo-hyphen
        version: v2
#      annotations:
#        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xms15m -Xmx15m -Xmn15m
        name: echo-hyphen
        image: quay.io/andyyuen/easyecho:latest
        imagePullPolicy: IfNotPresent
        command:
          - nc
        args:
          - '-p'
          - '2000'
          - '-lke'
          - '/echo-hyphen.sh'
        ports:
        - containerPort: 2000
          name: echo-hyphen
          protocol: TCP
        resources:
          requests: 
            memory: "20Mi" 
            cpu: "200m" # 1/5 core
          limits:
            memory: "40Mi"
            cpu: "500m" 
        securityContext:
          privileged: false
