security-mtls/manifests/dr-mtls.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-mtls
spec:
  host: "*"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
