security-mtls/manifests/deny-sm-mtls2.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "deny-sm-mtls2"
spec:
  selector:
    matchLabels:
      app: echo
  action: DENY
  rules:
    - from:
      - source:
          namespaces: ["sm-mtls2"]
